Fix swing tests on modular JDKs (#1039).