@@ -69,8 +69,12 @@ dependencies {
 test {
     useJUnit()
     exclude "**/benchmarks/**"
-    
+
     jvmArgs += '-Xss1280k'
+
+    if (JavaVersion.current() > JavaVersion.VERSION_1_8) {
+        jvmArgs += ['--add-opens', 'java.desktop/javax.swing.table=ALL-UNNAMED']
+    }
 
     jacoco.excludes = ['**/testsrc_tests_ecma_3_RegExp_perlstress*']
 
